# interactive-feedback-mcp

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_REPORT.md  CODESPACES_QUICK_START.md  CODESPACE_INSTRUCTIONS.md  COLAB_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_ONLINE_GUIDE.md  FIX_CODESPACE_UV.md  FIX_NODEJS_CODESPACE.md  GITHUB_INFRASTRUCTURE_GUIDE.md  QUICK_START_COLAB.md  README.md  SIMPLE_COLAB_DEPLOYMENT.md  SIMPLE_DEPLOYMENT.md  SIMPLE_GITHUB_DEPLOYMENT.md  ULTRA_SIMPLE_DEPLOYMENT.md  analyze_pyside6_usage.py  bash.exe.stackdump  colab_notebook.ipynb  colab_server.py  colab_web_ui.py  config.json  config.template.json  cursor_direct_input.py  cursor_integration.py  custom_http_transport_mcp.md  deploy_online.py  deploy_to_railway.py  feedback_ui.py  feedback_ui.py.bak  final_verification.py  image-utils.ts  index.ts  language_manager.py  main.py  mcp.json  mcp_image.py  (+41 more)
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  (+2 more)
config/: rules.json
docs/: input_performance_optimization.md  refactoring_plan_A_structure.md  refactoring_plan_B_ui_core.md  refactoring_plan_C_code_quality.md  refactoring_plan_E_concurrent_ui_final.md  splitter_implementation_plan.md  ui_optimization_plan.md  ui_theme_and_i18n_plan.md  布局优化与左右布局实现方案.md  项目优化说明文档.md
feedback_ui/: __init__.py  main_window.py
issues/: PyPI发布完成.md  UI修复进度.md  任务1-底部区域空间优化.md  任务2-左右布局功能实现.md  修复文件拖拽颜色问题.md  可拖拽分隔器实现.md  左右布局优化完成.md  添加故障排除文档.md  移除UI窗口图标功能.md  移除快捷图标功能.md
languages/: en.json  fr.json  zh.json
tests/: test_concurrent_ui.py
(+55 files in other folders)
